<resources>
    <string name="app_name">TEJA - Teman Jajan</string>
    <string name="welcome_title">Selamat datang di Teman Jajan</string>
    <string name="image_welcome">image_welcome</string>
    <string name="welcome_description">Makan sehat kini jadi lebih mudah. Lacak makanan Anda, pantau nutrisi Anda, dan capai target kesehatan Anda—semuanya di satu tempat.</string>
    <string name="get_started">Mulai</string>
    <string name="lets_connect_nwith_us">Mari Terhubung \nDengan Kami</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="forgot_password">Lupa Password?</string>
    <string name="login">Login</string>
    <string name="or">atau</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="don_t_have_an_account_sign_up">Belum punya akun? Sign Up</string>
    <string name="set_up_your_naccount">Set Up Your \nAccount</string>
    <string name="email">Email</string>
    <string name="create_account">Buat Akun</string>
    <string name="already_have_account_sign_in">Sudah punya akun? Sign In</string>
    <string name="sign_up_with_google">Sign Up With Google</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string-array name="categories">
        <item>Camilan manis</item>
        <item>Biskuit dan kue</item>
        <item>Lemak dan saus</item>
        <item>Saus penambah rasa makanan</item>
        <item>Sereal dan kentang</item>
        <item>Makanan komposit</item>
        <item>Makanan satu porsi</item>
        <item>Permen</item>
        <item>Susu dan produk susu</item>
        <item>Susu dan yogurt</item>
        <item>Sereal sarapan</item>
        <item>Minuman</item>
        <item>Minuman tanpa pemanis</item>
        <item>Keju</item>
        <item>Camilan asin</item>
        <item>Makanan pembuka</item>
        <item>Buah dan sayur</item>
        <item>Ikan, Daging, Telur</item>
        <item>Daging olahan</item>
        <item>Minuman manis</item>
        <item>Lemak</item>
        <item>Roti</item>
        <item>Pengganti susu berbasis tanaman</item>
        <item>Kacang-kacangan</item>
        <item>Buah-buahan</item>
        <item>Daging, Daging selain unggas</item>
        <item>Minuman pemanis buatan</item>
        <item>Pizza dan quiche</item>
        <item>Produk cokelat</item>
        <item>Unggas</item>
        <item>Es krim</item>
        <item>Ikan dan makanan laut</item>
        <item>Ikan berlemak</item>
        <item>Telur</item>
        <item>Buah kering</item>
        <item>Sandwich</item>
        <item>Produk asin dan berlemak</item>
        <item>Sup</item>
        <item>Pencuci mulut susu</item>
        <item>Kue kering</item>
        <item>Kentang</item>
        <item>Teh dan teh herbal serta kopi</item>
        <item>Nektar buah</item>
        <item>Sayur</item>
        <item>Sereal</item>
        <item>Daging</item>
        <item>Daging selain unggas</item>
        <item>Ikan</item>
        <item>Ikan berlemak sedikit</item>
        <item>Jeroan</item>
        <item>Sari buah</item>
        <item>Serealia</item>
        <item>Serealia olahan</item>
        <item>Umbi berpati</item>
        <item>Umbi berpati olahan</item>
        <item>Kacang</item>
        <item>biji</item>
        <item>bean</item>
        <item>olahan</item>
        <item>Sayuran</item>
        <item>Sayuran olahan</item>
        <item>Buah</item>
        <item>Buah olahan</item>
        <item>unggas olahan</item>
        <item>kerang</item>
        <item>udang</item>
        <item>udang olahan</item>
        <item>Telur olahan</item>
        <item>Susu</item>
        <item>Susu olahan</item>
        <item>Lemak dan minyak</item>
        <item>Lemak dan minyak olahan</item>
        <item>Gula</item>
        <item>sirup</item>
        <item>konfeksioneri</item>
        <item>Bumbu</item>
        <item>Bumbu olahan</item>
        <item>Minuman olahan</item>
    </string-array>


    <string name="spinner_prompt">Pilih Kategori Makanan</string>
    <string name="format_email_tidak_valid">Format email tidak valid</string>
    <string name="email_tidak_boleh_kosong">Email tidak boleh kosong</string>
    <string name="password_tidak_boleh_kosong">Password tidak boleh kosong</string>
    <string name="password_harus_memiliki_minimal_6_karakter">Password harus memiliki minimal 6 karakter</string>
    <string name="konfirmasi_keluar">Konfirmasi Keluar</string>
    <string name="apakah_kamu_ingin_keluar">Apakah kamu ingin keluar?</string>
    <string name="ya">Ya</string>
    <string name="tidak">Tidak</string>
    <string name="password_harus_sama">Password harus sama!</string>
    <string name="username_tidak_boleh_kosong">Username tidak boleh kosong</string>
    <string name="ambil_gambar_terlebih_dahulu">Ambil gambar terlebih dahulu</string>
    <string name="tidak_ada_foto">Tidak ada foto</string>
    <string name="crop_gagal">Crop Gagal: %1$s</string>
    <string name="detail_makanan">Detail Makanan</string>
    <string name="nama_makanan">Nama Makanan</string>
    <string name="peringkat_makanan">Peringkat makanan</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="kandungan_nutrisi">Kandungan Nutrisi</string>
    <string name="kalori">Kalori</string>
    <string name="_100kcal">100kcal</string>
    <string name="protein">Protein</string>
    <string name="gula">Gula</string>
    <string name="energi">Energi</string>
    <string name="lemak_jenuh">Lemak Jenuh</string>
    <string name="serat">Serat</string>
    <string name="apakah_kamu_menyukai_makanan_ini">Apakah kamu menyukai makanan ini?</string>
    <string name="simpan">Simpan</string>
    <string name="keterangan_A">Wah makanan ini punya nilai A yang berarti sehat untuk dikonsumsi</string>
    <string name="detail_hasil_analisis">Detail Hasil Analisis</string>
    <string name="apa_nama_makanan_ini">Apa nama makanan ini?</string>
    <string name="contoh_nama_makanan">contoh: Susu Milku</string>
    <string name="natrium">Natrium</string>
    <string name="mari_bergabung_bersama_kami">Mari Bergabung bersama kami</string>
    <string name="kembali">kembali</string>
    <string name="rekomendasi">Rekomendasi</string>
    <string name="nutrisi_harian">Nutrisi Harian</string>
    <string name="terbaru">Terbaru</string>
    <string name="riwayat">Riwayat</string>
    <string name="perbarui_profile">Perbarui Profile</string>
    <string name="preferensi">Preferensi</string>
    <string name="paket_berlangganan">Paket Berlangganan</string>
    <string name="langgananku">Langgananku</string>
    <string name="keluar">Keluar</string>
    <string name="pindai_nutrisi">Pindai Nutrisi</string>
    <string name="analisa">Analisa</string>
    <string name="menganalisis_nutrisi">Menganalisis Nutrisi..</string>
    <string name="cari">Cari</string>
    <string name="dashboard">Dashboard</string>
    <string name="pindai">Pindai</string>
    <string name="profil">Profil</string>
    <string name="cari_makanan">Cari makanan</string>
    <string name="dark_mode">Nyalakan Mode Gelap</string>
    <string name="your_point">Point Anda</string>
    <string name="tukar_point">Tukar Point Anda</string>
    <string name="text_tukar_point">Silahkan Pilih Hadiahmu untuk ditukar</string>
    <string name="harap_masukan_nama_makanan">Harap masukan nama makanan</string>
    <string name="gambar_tidak_ada">Gambar tidak ada</string>
    <string name="keterangan_B">Makanan ini mendapat nilai B yang masih tergolong baik untuk dikonsumsi.</string>
    <string name="keterangan_C">Makanan ini mendapat nilai C. Konsumsi sewajarnya untuk menjaga kesehatan.</string>
    <string name="keterangan_D">Makanan ini memiliki nilai D. Sebaiknya konsumsi dalam jumlah terbatas.</string>
    <string name="keterangan_E">Makanan ini mendapat nilai E. Hindari konsumsi berlebihan untuk menjaga kesehatan.</string>
    <string name="kategori">Kategori:</string>
    <string name="limit_nharianmu">Limit \nharianmu:</string>
    <string name="upgrade_ke_premium">Upgrade ke premium</string>
    <string name="halo">Halo,</string>
    <string name="berita">Berita</string>
    <string name="skip">Skip</string>
    <string name="kurang">Kurang</string>
    <string name="biasa">Biasa</string>
    <string name="suka">Suka</string>
    <string name="cinta">Cinta</string>
    <string name="lihat_lebih_lengkap">Lihat Lebih Lengkap</string>
    <string name="data_makanan_tidak_ditemukan">Data makanan tidak ditemukan</string>
    <string name="rekomendasi_makanan_sehat">Rekomendasi Makanan Sehat</string>
    <string name="mixed_vegetables">Mixed Vegetables</string>
    <string name="skim_milk">Skim Milk</string>
    <string name="almond_breeze">Almond Breeze</string>
    <string name="pineapple_slices">Pineapple slices</string>
    <string name="mashed_potatoes">Mashed Potatoes</string>


</resources>