<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_dashboard"
        android:title="@string/dashboard"
        android:icon="@drawable/baseline_home_24"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/nav_explore"
        android:title="@string/cari"
        android:icon="@drawable/baseline_search_24"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/nav_scan"
        android:title="@string/pindai"
        android:icon="@drawable/baseline_document_scanner_24"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/nav_history"
        android:title="@string/riwayat"
        android:icon="@drawable/material_symbols__history"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/nav_profile"
        android:title="@string/profil"
        android:icon="@drawable/iconamoon__profile_fill"
        app:showAsAction="ifRoom"/>

</menu>