<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.login.LoginActivity">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="46dp"
        android:layout_marginHorizontal="18dp"
        android:text="@string/lets_connect_nwith_us"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="46sp"
        android:textStyle="bold"
        android:alpha="0"
        tools:alpha="100"/>

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="18dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/hint_username"
        android:padding="16dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:inputType="textEmailAddress"
        android:alpha="0"
        tools:alpha="100"/>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="18dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:alpha="0"
        tools:alpha="100"/>

    <TextView
        android:id="@+id/forgotPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginVertical="28dp"
        android:layout_marginEnd="18dp"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:alpha="0"
        tools:alpha="100"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="55dp"
        android:layout_marginHorizontal="18dp"
        android:backgroundTint="@color/green"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:alpha="0"
        tools:alpha="100"/>

    <TextView
        android:id="@+id/txt_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/or"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:alpha="0"
        tools:alpha="100"/>

    <Button
        android:id="@+id/signInGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="55dp"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/black"
        android:drawableLeft="@drawable/ic_google"
        android:text="@string/sign_in_with_google"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:alpha="0"
        tools:alpha="100"/>

    <TextView
        android:id="@+id/signUpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/don_t_have_an_account_sign_up"
        android:textColor="@color/green"
        android:textSize="14sp"
        android:alpha="0"
        tools:alpha="100"/>

    <ImageView
        android:id="@+id/img_login"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/img_login"
        android:layout_gravity="bottom"
        android:scaleType="fitXY"
        android:alpha="0"
        tools:alpha="100"/>
</LinearLayout>
