<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.welcome.WelcomeActivity">

    <TextView
        android:id="@+id/txt_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="16dp"
        android:alpha="0"
        android:gravity="start"
        android:text="@string/welcome_title"
        android:textColor="@color/black"
        android:textSize="46sp"
        android:textStyle="bold"
        tools:alpha="100" />

    <ImageView
        android:id="@+id/img_welcome"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="18dp"
        android:layout_marginVertical="18dp"
        android:layout_weight="1"
        android:alpha="0"
        android:contentDescription="@string/image_welcome"
        android:src="@drawable/img_welcome"
        tools:alpha="100" />

    <TextView
        android:id="@+id/txt_desc_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:alpha="0"
        android:gravity="start"
        android:text="@string/welcome_description"
        android:textColor="@color/black"
        android:textSize="20sp"
        tools:alpha="100" />

    <Button
        android:id="@+id/btn_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginVertical="16dp"
        android:alpha="0"
        android:backgroundTint="@color/green"
        android:minHeight="55dp"
        android:text="@string/get_started"
        android:textSize="16sp"
        tools:alpha="100" />

</LinearLayout>
