<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.scan.ScanFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/pindai_nutrisi"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/previewImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:scaleType="fitCenter"
                android:src="@drawable/no_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitle" />

            <Button
                android:id="@+id/btnAnalyze"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:minHeight="55dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/green"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/analisa"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/previewImage" />

            <Button
                android:id="@+id/btnCamera"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="16dp"
                android:minHeight="55dp"
                android:backgroundTint="@color/green"
                android:drawableLeft="@drawable/outline_camera_alt_24"
                app:layout_constraintEnd_toStartOf="@id/btnAnalyze"
                app:layout_constraintTop_toBottomOf="@id/previewImage" />

            <TextView
                android:id="@+id/txt_daily"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/limit_nharianmu"
                android:gravity="center"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnCamera"
                app:layout_constraintTop_toBottomOf="@id/previewImage"/>

            <TextView
                android:id="@+id/txt_quota_scan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnCamera"
                app:layout_constraintTop_toBottomOf="@id/txt_daily"/>

            <Button
                android:id="@+id/btn_pro"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/upgrade_ke_premium"
                android:backgroundTint="@color/green"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnCamera"
                android:layout_marginVertical="4dp"/>

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:visibility="gone"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</FrameLayout>
